updates for heroku deploy3

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -142,7 +142,8 @@
     <div class="col-sm-4"> 
       <p>The Notebook App</p>
       <a href="http://notebook-app-elisha.herokuapp.com/" target="_blank"> 
-        <img class="responsive" src="/assets/notebook.png" alt="Smiley face" style="border:5px solid black">       
+        <img class="responsive" src="<%=asset_path('notebook.png') %>" alt="Smiley face" style="border:5px solid black"> 
+        
       </a>
     </div>
 
