--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,228 +1,227 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <!-- Theme Made By Elisha Tigah -->
-  <title>All About Me</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <style>
-    #content .col {
-      float: left;
-    }
-
-    body {
-      font: 20px Montserrat, sans-serif;
-      line-height: 1.8;
-      color: #f5f6f7;
-    }
-
-    .responsive {
-      width: 100%;
-      height: auto;
-      /* float: left;*/
-    }
-
-    @media only screen and (width: 375px) {
-      .responsive {
-        width: 10%;
-        height: 10%;
-        /*margin: 6px 0;*/
-      }
-    }
-
-    p {
-      font-size: 20px;
-    }
-
-    .margin {
-      margin-bottom: 45px;
-    }
-
-    .bg-1 {
-      background-color: tan;
-      /* Green */
-      color: #ffffff;
-    }
-
-    .bg-2 {
-      background-color: blueviolet;
-      /* Dark Blue */
-      color: #ffffff;
-    }
-
-    .bg-3 {
-      background-color: white;
-      /* White */
-      color: #555555;
-    }
-
-    .bg-4 {
-      background-color: gray;
-      /* Black Gray */
-      color: #8DFF00;
-      /* green */
-    }
-
-    .container-fluid {
-      padding-top: 70px;
-      padding-bottom: 70px;
-    }
-
-    .navbar {
-      padding-top: 15px;
-      padding-bottom: 15px;
-      border: 0;
-      border-radius: 0;
-      margin-bottom: 0;
-      font-size: 12px;
-      letter-spacing: 5px;
-      background-color: black;
-    }
-
-    .navbar-nav li a:hover {
-      color: red !important;
-    }
-  </style>
-</head>
+<html>
+<title>Elisha Tigah | Full-stack web developer</title>
+<meta charset="UTF-8">
 
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-        <a class="navbar-brand" href="#"> </a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#likes">My Likes</a></li>
-          <li><a href="#find">My Portfolio</a></li>
-        </ul>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-card" id="myNavbar">
+    <a href="#home" class="w3-bar-item w3-button w3-wide"> </a>  <!--Logo -->
+    <!-- Right-sided navbar links -->
+    <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
+      <a href="#portfolio" class="w3-bar-item w3-button"><i class="fa fa-user"></i> PORTFOLIO</a>
+      <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+    </div>
+    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
+
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+</div>
+
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
+  <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+</nav>
+
+<!-- Header with full-height image -->
+<header class="bgimg-1 w3-display-container " id="home">
+  <div class="w3-display-left w3-text-white" style="padding:48px">
+    <span class="w3-jumbo w3-hide-small"  style="background-color: white">Elisha Tigah</span><br>
+    <span class="w3-jumbo w3-hide-small" style="background-color: white">full stack web developer</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="background-color: white">Elisha Tigah</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="background-color: white">full stack web developer</span><br>
+    
+    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more</a></p>
+  </div> 
+</header>
+
+<!-- About Section -->
+<div class="w3-container" style="padding:128px 16px" id="about">
+  <h3 class="w3-center">ABOUT ME</h3>
+  <p class="w3-center w3-large">Hello, my name is Elisha Tigah. I am a full stack developer specializing in web development using Ruby on Rails.</p>
+  <div class="w3-row-padding w3-center" style="margin-top:64px">
+
+    <div class="w3-quarter">
+      <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Passion</p>
+      <p>I am very passionate about my work and therefore put in all the time and resources needed to produce excellent work</p>
+    </div>
+    <div class="w3-quarter">
+      <i class="fa fa-briefcase w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Commitment</p>
+      <p>I am very committed to completing any project and often like to go above and beyond the call of duty</p>
+    </div>
+    
+    <div class="w3-quarter">
+      <i class="fa fa-graduation-cap w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Learning</p>
+      <p>I like to take on new challenges and projects so I can keep up with the latest technologies</p>
+    </div>
+    
+    <div class="w3-quarter">
+      <i class="fa fa-medkit w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Mentor</p>
+      <p>I like helping others with the knowledge I have</p>
+    </div>
+  </div>
+</div>
+
+<!-- Team Section -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="portfolio">
+  <h3 class="w3-center">My Portfolio</h3>
+  <p class="w3-center w3-large">Recent Projects</p>
+  
+  <div class="w3-row-padding" style="margin-top:64px">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        
+         <h3>The Movie App</h3>
+        <a href="http://movie-app-elisha.herokuapp.com/" target="_blank">
+        <img class="responsive" src="/assets/movie.png" alt="Smiley face"  style="width:100%">              
+        </a>
+       
+        <div class="w3-container">
+         
+         
+          <p>This is a Movie rating and review application with searching capabilities.</p>
+           <p>The technology stack includes:
+
+            <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
+         
+          <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/movie-app-elisha"> Github repo </a></button></p>
+        </div>
       </div>
     </div>
-  </nav>
-
-  <!-- First Container -->
-  <div id="about" class="container-fluid bg-1 text-center">
-    <h3 class="margin">About Me</h3>
-    <img src="https://tinyurl.com/y96cf4b2" class="img-responsive img-circle margin" style="display:inline" alt="Bird" width="350" height="350">
-    <h3>I was born in Ghana, West Africa, the third born of 5 children of Rev. Samuel and Esther Tigah. I grew up in a town called Tamale, and then moved to Accra, the capital city of Ghana, when I was 7 years old. In Accra, I attended a school called Providence
-      Preparatory School.</h3>
-  </div>
-
-  <!-- Second Container -->
-  <div id="likes" class="container-fluid bg-2 text-center">
-    <h3 class="margin">My Likes</h3>
-    <p>I like working with Computers, singing, church work, reading Bishop Dag's books, learning new things, and speding time with family. I love playing soccer as well, especially on the PS3 </p>
-
-  </div>
-
-  <!-- Third Container (Grid) -->
-  <div id="find" class="container-fluid bg-3 text-center">
-    <h3 class="margin">My Portfolio</h3><br>
-
-    <div class="row">
-
-      <div class="col-sm-4">
-        <p>The Appointment App</p>
-
-        <a href="http://appointments-app-elisha.herokuapp.com/" target="_blank">
-        <img class="responsive" src="/assets/appointment.png" alt="Smiley face"  style="border:5px solid black">              
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        
+         <h3>The Blog App</h3>
+        <a href="http://movie-app-elisha.herokuapp.com/" target="_blank">
+        <img class="responsive" src="/assets/blog.png" alt="Smiley face"  style="width:100%">              
         </a>
-        <div align=left>
-          The appointment app is designed to keep track of appointments with multiple clients in multiple locations.
+       
+        <div class="w3-container">
+         
+         
+          <p>This is a blog app which allows user to view articles or create new articles by signing up.</p>
+          <p>The technology stack includes:
+
+            <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
+        </div>
+          
+          <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/movie-app-elisha"> Github repo </a></button></p>
+        </div>
+      </div>
+    
+  
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        
+         <h3>The Notebook App</h3>
+        <a href="http://notebook-app-elisha.herokuapp.com/" target="_blank">
+        <img class="responsive" src="<%=asset_path('notebook.png') %>" alt="Smiley face"  style="width:100%">              
+        </a>
+       
+        <div class="w3-container">
+
+         <p>The notebook app allows users to view and create notes by signing up.</p>
+          <p>The technology stack includes:
+
+            <strong>Ruby on Rails, SQlite3, PostgreSQL, CSS, JQuery, HTML5, HAML and Bootstrap </strong></p>
+        </div>
+          
+          <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/movie-app-elisha"> Github repo </a></button></p>
+        </div>
+    </div>
+  
+    <div class="w3-col l3 m6 w3-margin-bottom">
+   <div class="w3-card">
+        
+         <h3>The Appointment App</h3>
+        <a href="http://appointments-app-elisha.herokuapp.com/" target="_blank">
+        <img class="responsive" src="/assets/appointment.png" alt="Smiley face"  style="width:100%">              
+        </a>
+       
+        <div class="w3-container">
+         
+         
+         <p>The appointment app is designed to keep track of appointments with multiple clients in multiple locations.</p>
           <p>The technology stack includes:
 
             <strong>Ruby on Rails, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
         </div>
-
-        <p>
-          <a href="https://github.com/ektigah/rails-appointment"> Github repo </a>
-        </p>
-
-      </div>
-
-
-      <div class="col-sm-4">
-        <p>The Movie App</p>
-
-        <a href="http://movie-app-elisha.herokuapp.com/" target="_blank">
-        <img class="responsive" src="/assets/movie.png" alt="Smiley face"  style="border:5px solid black">              
-        </a>
-        <div align=left>
-          This is a Movie rating and review application with searching capabilities.
-          <p>The technology stack includes:
-
-            <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
+           
+          <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/rails-appointment"> Github repo </a></button></p>
         </div>
-
-        <p>
-          <a href="https://github.com/ektigah/movie-app-elisha"> Github repo </a>
-        </p>
-
-      </div>
       
-     
-       <div class="col-sm-4">
-        <p>The Blog App</p>
-
-        <a href="http://blog-app-elisha.herokuapp.com/" target="_blank">
-        <img class="responsive" src="/assets/blog.png" alt="Smiley face"  style="border:5px solid black">              
-        </a>
-        <div align=left>
-          This is a blog app which allows user to view articles or create new articles by signing up.
-          <p>The technology stack includes:
-
-            <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
-        </div>
-
-        <p>
-          <a href="https://github.com/ektigah/movie-app-elisha"> Github repo </a>
-        </p>
-
-      </div>
-      
-      
-     <div class="col-sm-4">
-        <p>The Notebook App</p>
-
-        <a href="http://notebook-app-elisha.herokuapp.com/" target="_blank">
-        <img class="responsive" src="<%=asset_path('notebook.png') %>" alt="Smiley face"  style="border:5px solid black">              
-        </a>
-        <div align=left>
-          The notebook app allows users to view and create notes by signing up.
-          <p>The technology stack includes:
-
-            <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5, HAML and Bootstrap </strong></p>
-        </div>
-
-        <p>
-          <a href="https://github.com/ektigah/notebook-app-elisha"> Github repo </a>
-        </p>
-
-      </div>
-
-
     </div>
-
+  
+  </div>
   </div>
 
-  <!-- Footer -->
-  <footer class="container-fluid bg-4 text-center">
-    <p>Bootstrap Theme Made By Elisha Tigah &copy;</p>
-  </footer>
+
+
+<!-- Modal for full size images on click-->
+<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
+  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
+  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
+    <img id="img01" class="w3-image">
+    <p id="caption" class="w3-opacity w3-large"></p>
+  </div>
+</div>
+
+
+<!-- Contact Section -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
+  <h3 class="w3-center">CONTACT</h3>
+  <p class="w3-center w3-large">Lets get in touch.</p>
+  <div style="margin-top:48px">
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Philadelphia, PA</p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: 267-809-5530</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: ektigah@gmail.com</p>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <p >Elisha Tigah &copy;</a></p>
+</footer>
+ 
+<script>
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+
+
+// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
+
+function w3_open() {
+  if (mySidebar.style.display === 'block') {
+    mySidebar.style.display = 'none';
+  } else {
+    mySidebar.style.display = 'block';
+  }
+}
+
+// Close the sidebar with the close button
+function w3_close() {
+    mySidebar.style.display = "none";
+}
+</script>
 
 </body>
-
 </html>
