--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 <html>
 <title>Elisha Tigah | Full-stack web developer</title>
 <meta charset="UTF-8">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
 
 <!-- Navbar (sit on top) -->
