--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,8 @@
  * It is generally better to create a new file per style scope.
  *
  *= require font-awesome
+ *= require bootstrap-theme.min
+ *= require bootstrap.min
  *= require_tree .
  *= require_self
  */
