--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -85,7 +85,7 @@
         </a>
         
         <p><strong>The ChurchMMS App</strong></p>
-        <p align="left">The ChurchMMS app allows Church administrators to send announcements via text messages to their church members.</p>
+        <p align="left">The ChurchMMS app allows Church administrators to send announcements through text messages to their church members.</p>
           <p align="left">The technology stack includes:
             <strong>Ruby on Rails, TwilioAPI, StripeAPI, CSS, JQuery, HTML5 and Bootstrap </strong></p>
         
@@ -114,11 +114,11 @@
           <img src="/assets/blog.png" alt="Smiley face" width="400" height="300">
         </a>
         <p><strong>The Blog App</strong></p>
-        <p align="left">This is a blog app which allows user to view articles or create new articles by signing up.</p>
+        <p align="left">This is a blog app which allows user to view articles or create new articles by signing up. Artcicles can be viewed by category.</p>
        
           <p align="left">The technology stack includes:
              <strong>Ruby on Rails, SQlite3, PostgreSQL, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
-       <br>
+    
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/blog-app"> Github repo </a></button></p>
       </div>
     </div>
@@ -136,15 +136,14 @@
           <img src="<%=asset_path('notebook.png') %>" alt="Smiley face" width="400" height="300">
         </a>
         <p><strong>The Notebook App</strong></p>
-        <p align="left">The notebook app allows users to view and create notes by signing up.</p>
-        <br>
+        <p align="left">The notebook app allows users to view and create notes by signing up. User can see when a note was created.</p>
+        
           <p align="left">The technology stack includes:
              <strong>Ruby on Rails, SQlite3, PostgreSQL, CSS, JQuery, HTML5, HAML and Bootstrap </strong></p>
        
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/notebook-app-elisha"> Github repo </a></button></p>
       </div>
     </div>
-      
       
       
       <div class="col-sm-4">
@@ -154,7 +153,7 @@
         </a>
         <p><strong>The Appointments App</strong></p>
         <p align="left">The appointment app is designed to keep track of appointments with multiple clients in multiple locations.</p>
-        <br>
+    
           <p align="left">The technology stack includes:
              <strong>Ruby on Rails, ERB, CSS, JQuery, HTML5 and Bootstrap </strong></p>
        
@@ -169,10 +168,10 @@
         </a>
         <p><strong>The Todo List API App</strong></p>
         <p align="left">This is a Todo list API where users can manage their to-do lists and todo items.</p>
-        <br>
+        
           <p align="left">The technology stack includes:
             <strong>Ruby on Rails, JWT, Serializers, API Versioning and Pagination </strong></p>
-       <br>
+     
         <p><button class="w3-button w3-light-grey w3-block"><a href="https://github.com/ektigah/todo-api"> Github repo </a></button></p>
       </div>
     </div>
