added resume to nav

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,6 +9,7 @@
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="#portfolio" class="w3-bar-item w3-button"><i class="fa fa-user"></i> PORTFOLIO</a>
       <a href="#contact" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i> CONTACT</a>
+      <a class="w3-bar-item w3-button" href="Elisha_Tigah_Resume_2019.pdf" download> <i class="fa fa-file"></i> </i> RESUME</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
@@ -205,7 +206,7 @@
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Philadelphia, PA</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: 267-809-5530</p>
-    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: ektigah@gmail.com</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: <a href="mailto:ektigah@gmail.com">ektigah@gmail.com</a> </p>
   </div>
 </div>
 
